--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ aiologger = "^0.6.1"
 asyncpg = "^0.25.0"
 aiomysql = "^0.0.22"
 uvicorn = {extras = ["standart"], version = "^0.16.0"}
+arq = "^0.22"
 
 [tool.poetry.dev-dependencies]
 
