--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -12,6 +12,10 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
+
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       
       -
         name: Set up Docker Buildx
@@ -38,6 +42,7 @@ jobs:
           IMAGE: ${{ steps.repository_name.outputs.lowercase }}
         with:
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: ghcr.io/${{ env.IMAGE }}:latest
           context: .
           file: ./docker/build.dockerfile
