--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ asyncpg = "^0.25.0"
 aiomysql = "^0.0.22"
 uvicorn = {extras = ["standart"], version = "^0.16.0"}
 arq = "^0.22"
+uvloop = "^0.16.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
