--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Kurbanov Bulat <kurbanovbul@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-fastapi = "^0.70.1"
+fastapi = ">=0.71.0"
 pydantic = {extras = ["dotenv"], version = "^1.9.0"}
 httpx = "^0.21.1"
 aiologger = "^0.6.1"
