--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Kurbanov Bulat <kurbanovbul@gmail.com>"]
 python = "^3.9"
 fastapi = ">=0.71.0"
 pydantic = {extras = ["dotenv"], version = "^1.9.0"}
-httpx = "^0.21.1"
+httpx = ">=0.23.0"
 aiologger = "^0.6.1"
 asyncpg = "^0.25.0"
 aiomysql = "^0.0.22"
