--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ env_logger = "0.9.0"
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
 tokio-cron-scheduler = "0.8.1"
+axum = "0.5.16"
