--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
 tokio-cron-scheduler = "0.8.1"
 axum = "0.5.16"
+ammonia = "3"
+maplit = "1.0.2"
