--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ futures =  "0.3.28"
 reqwest = { version = "0.11.18", features = ["stream"] }
 tokio-util = { version = "0.7.8", features = ["compat"] }
 async-compression = { version = "0.4.0", features = ["futures-io", "gzip"] }
-sentry = "0.31.3"
+sentry = { version = "0.31.3", features = ["debug-images"] }
 lazy_static = "1.4.0"
 log = "0.4.18"
 env_logger = "0.10.0"
