--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,13 @@ tokio-util = { version = "0.7.8", features = ["compat"] }
 async-compression = { version = "0.4.0", features = ["futures-io", "gzip"] }
 sentry = { version = "0.31.3", features = ["debug-images"] }
 lazy_static = "1.4.0"
-log = "0.4.18"
-env_logger = "0.10.0"
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 tokio-cron-scheduler = "0.9.4"
 axum = "0.6.18"
 ammonia = "3.3.0"
 maplit = "1.0.2"
+
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
+tower-http = { version = "0.4.3", features = ["trace"] }
