--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ maplit = "1.0.2"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
 tower-http = { version = "0.5.0", features = ["trace"] }
+dotenv = "0.15.0"
