--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,7 @@ maplit = "1.0.2"
 
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
+sentry-tracing = "0.32.3"
+
 tower-http = { version = "0.5.2", features = ["trace"] }
 dotenv = "0.15.0"
