--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,28 +6,28 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sql-parse = "0.18.0"
-tokio = { version = "1.37.0", features = ["full"] }
-tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
-deadpool-postgres = "0.13.0"
-async-trait = "0.1.80"
-chrono = "0.4.38"
-futures =  "0.3.30"
-reqwest = { version = "0.12.4", features = ["stream"] }
-tokio-util = { version = "0.7.10", features = ["compat"] }
-async-compression = { version = "0.4.8", features = ["futures-io", "gzip"] }
-sentry = { version = "0.32.3", features = ["debug-images"] }
-lazy_static = "1.4.0"
-serde = { version = "1.0.198", features = ["derive"] }
-serde_json = "1.0.116"
-tokio-cron-scheduler = "0.10.0"
-axum = "0.7.5"
+sql-parse = "0.24.0"
+tokio = { version = "1.42.0", features = ["full"] }
+tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
+deadpool-postgres = "0.14.1"
+async-trait = "0.1.83"
+chrono = "0.4.39"
+futures =  "0.3.31"
+reqwest = { version = "0.12.9", features = ["stream"] }
+tokio-util = { version = "0.7.13", features = ["compat"] }
+async-compression = { version = "0.4.18", features = ["futures-io", "gzip"] }
+sentry = { version = "0.35.0", features = ["debug-images"] }
+lazy_static = "1.5.0"
+serde = { version = "1.0.216", features = ["derive"] }
+serde_json = "1.0.134"
+tokio-cron-scheduler = "0.13.0"
+axum = "0.7.9"
 ammonia = "4.0.0"
 maplit = "1.0.2"
 
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
-sentry-tracing = "0.32.3"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
+sentry-tracing = "0.35.0"
 
-tower-http = { version = "0.5.2", features = ["trace"] }
-dotenv = "0.15.0"
+tower-http = { version = "0.6.2", features = ["trace"] }
+dotenvy = "0.15.0"
